--- a/html/location.html
+++ b/html/location.html
@@ -42,12 +42,12 @@
             <h2>Mercedes-benz</h2>
             <div class="cars">
                 <div class="car">
-                    <img src="../image/aamerco g63.png" alt="Hypercar 1">
+                    <img src="../image/aamerco g63.png" onclick="window.location.href='souscription.html';" alt="Cliquez pour aller à la page 2">
                     <h3>Mercedes - G63 AMG</h3>
                     <p>Prix: 5500€/mois</p>
                 </div>
                 <div class="car">
-                    <img src="../image/aamerco gt53.png" alt="Hypercar 2">
+                    <img src="../image/aamerco gt53.png" onclick="window.location.href='souscription.html';" alt="Cliquez pour aller à la page 2">
                     <h3>Mercedes - GT53 AMG</h3>
                     <p>Prix: 3200€/mois</p>
                 </div>
@@ -57,17 +57,17 @@
             <h2>Porsche</h2>
             <div class="cars">
                 <div class="car">
-                    <img src="../image/aaporsche 718.png" alt="Supercar 1">
+                    <img src="../image/aaporsche 718.png" onclick="window.location.href='souscription.html';" alt="Cliquez pour aller à la page 2">
                     <h3>porsche 718</h3>
                     <p>Prix: 2400€/mois</p>
                 </div>
                 <div class="car">
-                    <img src="../image/aaporsche 992 carrera.png" alt="Supercar 2">
+                    <img src="../image/aaporsche 992 carrera.png" onclick="window.location.href='souscription.html';" alt="Cliquez pour aller à la page 2">
                     <h3>porshce 992 carrera</h3>
                     <p>Prix: 3700€/mois</p>
                 </div>
                 <div class="car">
-                    <img src="../image/aaporsche gt3 rs.png" alt="Supercar 3">
+                    <img src="../image/aaporsche gt3 rs.png" onclick="window.location.href='souscription.html';" alt="Cliquez pour aller à la page 2">
                     <h3>porsche gt3 rs</h3>
                     <p>Prix: 9000€/mois</p>
                 </div>
@@ -77,16 +77,18 @@
             <h2>Lamborghini</h2>
             <div class="cars">
                 <div class="car">
-                    <img src="../image/aaavaentador.png" alt="Citadine 1">
+                    <img src="../image/aaavaentador.png" onclick="window.location.href='souscription.html';" alt="Cliquez pour aller à la page 2">
                     <h3>Lamborghini Aventador SVJ</h3>
                     <p>Prix: 13000€/mois</p>
                 </div>
                 <div class="car">
-                    <img src="../image/aatecnica.png" alt="Citadine 2">
+                    <img src="../image/aatecnica.png" onclick="window.location.href='souscription.html';" alt="Cliquez pour aller à la page 2">
                     <h3>Lamborghini Tecnica</h3>
                     <p>Prix: 7500€/mois</p>
                 </div>
                 <div class="car">
-                    <img src="../image/aaurus.png" alt="Citadine 3">
+                    <img src="../image/aaurus.png" onclick="window.location.href='souscription.html';" alt="Cliquez pour aller à la page 2">
                     <h3>Lamborghini Urus S</h3>
                     <p>Prix: 8000€/mois</p>
+        </body>
+</html>
