--- a/html/leasing.html
+++ b/html/leasing.html
@@ -110,16 +110,16 @@
     <!-- Modales -->
     <div id="modal-citadine1" class="modal">
         <div class="modal-content">
-            <h3>Citadine 1 - Autres Angles</h3>
+            <h3>KIA Picanto</h3>
             <img src="../image/Kia/kia1_1.jpg" alt="KIA Angle 1">
             <img src="../image/Kia/kia1_2.jpg" alt="KIA Angle 2">
             <a href="#" class="close">Fermer</a>
         </div>
     </div>
 
-    <div id="modal-citadine2" class="modal">
+    <div id="modal-citadines2" class="modal">
         <div class="modal-content">
-            <h3>Citadine 2 - Autres Angles</h3>
+            <h3>Mini cooper</h3>
             <img src="../image/Mini cooper/mini cooper_1.jpg" alt="Mini cooper - Angle 1">
             <img src="../image/Mini cooper/mini cooper_2.jpg" alt="Mini cooper - Angle 2">
             <a href="#" class="close">Fermer</a>
@@ -128,7 +128,7 @@
 
     <div id="modal-supercar1" class="modal">
         <div class="modal-content">
-            <h3>supercar 1 - Autres Angles</h3>
+            <h3>Classe G</h3>
             <img src="../image/Classe G/classe g_1.jpg" alt="KIA Angle 1">
             <img src="../image/Classe G/classe g_2.jpg" alt="KIA Angle 2">
             <a href="#" class="close">Fermer</a>
@@ -137,7 +137,7 @@
 
     <div id="modal-supercar2" class="modal">
         <div class="modal-content">
-            <h3>supercar 2 - Autres Angles</h3>
+            <h3>BMW 320d</h3>
             <img src="../image/BMW 320d/320d_1.jpg" alt="BMW 320d - Angle 1">
             <img src="../image/BMW 320d/320d_2.jpg" alt="BMW 320d - Angle 2">
             <a href="#" class="close">Fermer</a>
@@ -146,7 +146,7 @@
    
     <div id="modal-supercar3" class="modal">
         <div class="modal-content">
-            <h3>supercar 1 - Autres Angles</h3>
+            <h3>Mercedes EQE</h3>
             <img src="../image/Mercedes EQE/EQE_1.jpg" alt="Mercedes EQE Angle 1">
             <img src="../image/Mercedes EQE/EQE_2.jpg" alt="Mercedes EQE Angle 2">
             <a href="#" class="close">Fermer</a>
@@ -155,7 +155,7 @@
 
     <div id="modal-supercar4" class="modal">
         <div class="modal-content">
-            <h3>supercar 2 - Autres Angles</h3>
+            <h3>Mercedes S450</h3>
             <img src="../image/Mercedes S450/S450_1.jpg" alt="Mercedes S450 - Angle 1">
             <img src="../image/Mercedes S450/S450_2.jpg" alt="Mercedes S450 - Angle 2">
             <a href="#" class="close">Fermer</a>
@@ -164,7 +164,7 @@
     
     <div id="modal-hypercar1" class="modal">
         <div class="modal-content">
-            <h3>supercar 1 - Autres Angles</h3>
+            <h3>Amg GTs</h3>
             <img src="../image/Amg GTs/GTs_1.jpg" alt="GTs Angle 1">
             <img src="../image/Amg GTs/GTs_2.jpg" alt="GTs Angle 2">
             <a href="#" class="close">Fermer</a>
@@ -173,7 +173,7 @@
 
     <div id="modal-hypercar2" class="modal">
         <div class="modal-content">
-            <h3>supercar 2 - Autres Angles</h3>
+            <h3>Amg SLC43</h3>
             <img src="../image/Amg SLC43/SLC43_1.jpg" alt="Amg SLC43 - Angle 1">
             <img src="../image/Amg SLC43/SLC43_2.jpg" alt="Amg SLC43 - Angle 2">
             <a href="#" class="close">Fermer</a>
