--- a/html/leasing.html
+++ b/html/leasing.html
@@ -44,13 +44,13 @@
             <h2>Citadines</h2>
             <div class="cars">
                 <div class="car">
-                    <img src="../image/Kia/kia1.jpg" alt="KIA">
+                    <img src="../image/Kia/kia1.jpg" onclick="window.location.href='souscription.html';" alt="Cliquez pour aller à la page 2">
                     <h3>KIA Picanto</h3>
                     <p>Prix: 400€/mois</p>
                     <a href="#modal-citadine1">Voir plus d'angles</a>
                 </div>
                 <div class="car">
-                    <img src="../image/Mini cooper/mini cooper.jpg" alt="Mini cooper">
+                    <img src="../image/Mini cooper/mini cooper.jpg" onclick="window.location.href='souscription.html';" alt="Cliquez pour aller à la page 2">
                     <h3>Mini cooper</h3>
                     <p>Prix: 450€/mois</p>
                     <a href="#modal-citadines2">Voir plus d'angles</a>
@@ -62,13 +62,13 @@
             <h2>Hypercars</h2>
             <div class="cars">
                 <div class="car">
-                    <img src="../image/Amg GTs/GTs.jpg" alt="Amg GTs">
+                    <img src="../image/Amg GTs/GTs.jpg" onclick="window.location.href='souscription.html';" alt="Cliquez pour aller à la page 2">
                     <h3>Amg GTs</h3>
                     <p>Prix: 5000€/mois</p>
                     <a href="#modal-hypercar1">Voir plus d'angles</a>
                 </div>
                 <div class="car">
-                    <img src="../image/Amg SLC43/SLC43.jpg" alt=" Amg SLC43">
+                    <img src="../image/Amg SLC43/SLC43.jpg" alt=" onclick="window.location.href='souscription.html';" alt="Cliquez pour aller à la page 2">
                     <h3>Amg SLC43</h3>
                     <p>Prix: 4500€/mois</p>
                     <a href="#modal-hypercar2">Voir plus d'angles</a>
@@ -80,19 +80,19 @@
             <h2>Supercars</h2>
             <div class="cars">
                 <div class="car">
-                    <img src="../image/Classe G/classe g.jpg" alt="Classe G">
+                    <img src="../image/Classe G/classe g.jpg" onclick="window.location.href='souscription.html';" alt="Cliquez pour aller à la page 2">
                     <h3>Classe G</h3>
                     <p>Prix: 3000€/mois</p>
                     <a href="#modal-supercar1">Voir plus d'angles</a>
                 </div>
                 <div class="car">
-                    <img src="../image/BMW 320d/320d.jpg" alt="BMW 320d">
+                    <img src="../image/BMW 320d/320d.jpg" onclick="window.location.href='souscription.html';" alt="Cliquez pour aller à la page 2">
                     <h3>BMW 320d</h3>
                     <p>Prix: 3200€/mois</p>
                     <a href="#modal-supercar2">Voir plus d'angles</a>
                 </div>
                 <div class="car">
-                    <img src="../image/Mercedes EQE/EQE.jpg" alt="Mercedes EQE">
+                    <img src="../image/Mercedes EQE/EQE.jpg" onclick="window.location.href='souscription.html';" alt="Cliquez pour aller à la page 2">
                     <h3>Mercedes EQE</h3>
                     <p>Prix: 3100€/mois</p>
                     <a href="#modal-supercar3">Voir plus d'angles</a>
