--- a/html/leasing.html
+++ b/html/leasing.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>IconicMotors - Leasing</title>
     <link rel="stylesheet" href="../style/leasing.css">
+    <link rel="icon" href="../image/IConiMotors.png">
 </head>
 <body>
     
