--- a/html/location.html
+++ b/html/location.html
@@ -90,5 +90,7 @@
                     <img src="../image/aaurus.png" onclick="window.location.href='souscription.html';" alt="Cliquez pour aller à la page 2">
                     <h3>Lamborghini Urus S</h3>
                    <p>Prix: 8000€/mois</p>  
+                </div>
+            </section>
                </body>           
 </html>
